--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/components/_modals_extend.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/components/_modals_extend.less
@@ -231,6 +231,23 @@
 			padding-top:0 !important;
 			button{
 				min-width:100px;
+                padding: 10px 28.5px;
+                border-radius: 4px;
+                &:focus {
+                    color: #ffffff;
+                    background-color: #155DA4;
+                    border-color: #155DA4;
+                }
+                &:hover{
+                    color: #ffffff;
+                    background-color: #4F85BB;
+                    border-color: #4F85BB;
+                }
+                &:active{
+                    color: #ffffff;
+                    background-color: #10477D;
+                    border-color: #10477D;
+                }
 			}
 		}
 	}
