--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/logo.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/logo.phtml
@@ -22,19 +22,19 @@
              <?php echo $block->getLogoWidth() ? 'width="' . $block->getLogoWidth() . '"' : '' ?>
              <?php echo $block->getLogoHeight() ? 'height="' . $block->getLogoHeight() . '"' : '' ?>
         />
-        <?php 
-            $mobileLogo = $_themeHelper->getMediaUrl() .'codazon/themeoptions/background/'.$_themeHelper->getConfig('general_section/header/mobile_logo'); 
+        <?php
+            $mobileLogo = $_themeHelper->getMediaUrl() .'codazon/themeoptions/background/'.$_themeHelper->getConfig('general_section/header/mobile_logo');
             $mobileLogo = (strlen($_themeHelper->getConfig('general_section/header/mobile_logo')) > 3) ? $mobileLogo : $block->getLogoSrc();
         ?>
         <img class="small-logo" src="<?php echo $mobileLogo ?>"
              alt="<?php echo $block->getLogoAlt() ?>"
              <?php echo $block->getLogoWidth() ? 'width="' . $block->getLogoWidth() . '"' : '' ?>
              <?php echo $block->getLogoHeight() ? 'height="' . $block->getLogoHeight() . '"' : '' ?>
-        />      
+        />
     </a>
 <?php if($mobileLogo == $block->getLogoSrc()): ?>
 <script type="text/javascript">
-require(['jquery'],function($){      
+require(['jquery'],function($){
       var logoSrc = "<?php echo $block->getLogoSrc() ?>";
       var imageType = logoSrc.substr(-4);
     var imageName = logoSrc.substr(0, logoSrc.length - 4);
@@ -43,3 +43,26 @@ require(['jquery'],function($){
 });
 </script>
 <?php endif ?>
+
+<script>
+    var now_url = window.location.href;
+    if (now_url.includes("?cjevent")) {
+        setCustomCookie("waterdrop_ch","CJ");
+    }
+    if (now_url.includes("?sscid")) {
+        setCustomCookie("waterdrop_ch","ShareASale");
+    }
+
+    function setCustomCookie(name,value)
+    {
+        var Days = 45;
+        var exp = new Date();
+        exp.setTime(exp.getTime() + Days*24*60*60*1000);
+        document.cookie = name + "="+ escape (value) + ";expires=" + exp.toGMTString()+";path=/;";
+    }
+</script>
+
+<!-- Bing -->
+<script>(function(w,d,t,r,u){var f,n,i;w[u]=w[u]||[],f=function(){var o={ti:"56282974"};o.q=w[u],w[u]=new UET(o),w[u].push("pageLoad")},n=d.createElement(t),n.src=r,n.async=1,n.onload=n.onreadystatechange=function(){var s=this.readyState;s&&s!=="loaded"&&s!=="complete"||(f(),n.onload=n.onreadystatechange=null)},i=d.getElementsByTagName(t)[0],i.parentNode.insertBefore(n,i)})(window,document,"script","//bat.bing.com/bat.js","uetq1");</script>
+<script>(function(w,d,t,r,u){var f,n,i;w[u]=w[u]||[],f=function(){var o={ti:"56348984"};o.q=w[u],w[u]=new UET(o),w[u].push("pageLoad")},n=d.createElement(t),n.src=r,n.async=1,n.onload=n.onreadystatechange=function(){var s=this.readyState;s&&s!=="loaded"&&s!=="complete"||(f(),n.onload=n.onreadystatechange=null)},i=d.getElementsByTagName(t)[0],i.parentNode.insertBefore(n,i)})(window,document,"script","//bat.bing.com/bat.js","uetq2");</script>
+<!-- End Bing -->
