change soap api options.

--- a/app/code/Ecopure/Gift/view/frontend/email/warranty_reg_template.html
+++ b/app/code/Ecopure/Gift/view/frontend/email/warranty_reg_template.html
@@ -49,7 +49,7 @@
                         height="{{var logo_height}}"
                         {{/if}}
 
-                        src="http://lancer.fastest.com/media/ecopure/waterdrop.png"
+                        src="https://www.water-filter.com/media/ecopure/waterdrop.png"
                         alt="{{var logo_alt}}"
                         border="0"
                         />
