change buyer protection text.

--- a/app/code/Ecopure/Checkout/view/frontend/templates/custom-block.phtml
+++ b/app/code/Ecopure/Checkout/view/frontend/templates/custom-block.phtml
@@ -33,7 +33,7 @@
             <span>Full refund if you don't receive your order</span>
         </div>
         <div class="custom-proterction-contentbox-info2">
-            <span>Full refund if the item is not as described</span>
+            <span>Full refund if the item is quality defective</span>
         </div>
     </div>
 </div>
