--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/social.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/social.phtml
@@ -57,7 +57,7 @@ $_themeHelper = $this->helper('Codazon\ThemeOptions\Helper\Data');
             <span>Full refund if you don't receive your order</span>
         </div>
         <div class="custom-proterction-contentbox-info2">
-            <span>Full refund if the item is not as described</span>
+            <span>Full refund if the item is quality defective</span>
             <a class="custom-style-a" href="/return-refund-policy">Learn More</a>
         </div>
     </div>
