list add nsf & hide list category filter.

--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
@@ -65,8 +65,10 @@
 				padding-top:10px;
 			}
 			.cdz-product-bottom:not(.non-hover){
-				position: absolute; left: 0; top: 96px;
-				//background:#fff;
+				position: absolute;
+                left: 0;
+                top: 124px;
+                //background:#fff;
 				//.abs-scale(~'0, 0');
                 opacity: 0;
 				width: 100%;
