--- a/app/design/frontend/Codazon/fastest/fashion/Magento_LayeredNavigation/templates/layer/view.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_LayeredNavigation/templates/layer/view.phtml
@@ -35,10 +35,12 @@
                         <strong role="heading" aria-level="2" class="block-subtitle filter-subtitle"><?php /* @escapeNotVerified */ echo __('Shopping Options') ?></strong>
                         <div class="filter-options" id="narrow-by-list" data-role="content" data-mage-init='{"accordion":{"openedState": "active", "collapsible": true, "active": false, "multipleCollapsible": false}}'>
                     <?php  $wrapOptions = true; endif; ?>
+                    <?php  if($filter->getName() != __('Category')): ?>
                     <div data-role="collapsible" class="filter-options-item">
                         <div data-role="title" class="filter-options-title"><?php /* @escapeNotVerified */ echo __($filter->getName()) ?></div>
                         <div data-role="content" class="filter-options-content"><?php /* @escapeNotVerified */ echo $block->getChildBlock('renderer')->render($filter); ?></div>
                     </div>
+                    <?php endif; ?>
                 <?php endif; ?>
             <?php endforeach; ?>
             <?php if ($wrapOptions): ?>
