--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/templates/product/list.phtml
@@ -144,6 +144,19 @@ $filterHelper = $this->helper('Codazon\ProductFilter\Helper\Data');
 								</a>
 							</strong>
 
+                            <style>
+                                .certified_info {
+                                    min-height: 16px;
+                                    font-size: 14px;
+                                    line-height: 16px;
+                                    color: #155DA4;
+                                    margin-bottom: 12px;
+                                }
+                            </style>
+                            <div class="certified_info">
+                                <?php /* @escapeNotVerified */ echo $_product->getCertifiedInfo(); ?>
+                            </div>
+
                             <?php if($showReviewRating): ?>
                                 <?php echo $block->getReviewsSummaryHtml($_product, $templateType); ?>
                             <?php endif ?>
