change sign up & contant us style.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Contact/templates/store_map.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Contact/templates/store_map.phtml
@@ -75,6 +75,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <div class="contact-word">1-888-352-3558 (Business Hours)</div>
     <div class="contact-small-title">Email Us:</div>
     <div class="contact-word">service@water-filter.com (24/7)</div>
-    <div class="contact-small-title">Our Address:</div>
-    <div class="contact-word">US Business Office: 17910 E Ajax Circle, City of Industry, CA 91748</div>
+    <div class="contact-word">US Business Office:</div>
+	<div class="contact-word">Ecolife Technologies, Inc.</div>
+    <div class="contact-word">17910 E Ajax Circle, City of Industry, CA 91748</div>
 </div>
