--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/widget/name.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/widget/name.phtml
@@ -25,6 +25,11 @@
         width: calc(50vw - 22px);
     }
 }
+@media screen and (max-width: 767px) {
+    .block-content-register  .field-name-lastname{
+        margin-left: 11px;
+    }
+}
 </style>
 
 
