mobile popup add close button.

--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/components/_modals_extend.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/components/_modals_extend.less
@@ -479,7 +479,14 @@
         .modal-popup .modal-inner-wrap{
             .modal-header {
                 .action-close {
-                    display: none;
+                    top: -42px;
+                    right: -10px;
+                    background: transparent !important;
+                    &:before {
+                        font-weight: normal !important;
+                        font-size: 16px;
+                        color: #fff !important;
+                    }
                 }
             }
             .cdz-popup-newsletter {
