close google ads codes,.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/templates/success.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/templates/success.phtml
@@ -9,21 +9,21 @@
 ?>
 <?php /** @var $block \Magento\Checkout\Block\Onepage\Success */ ?>
 
-<!-- Event snippet for water-filter.com购买转化率 conversion page -->
-<script>
-    gtag('event', 'conversion', {
-        'send_to': 'AW-746876205/WsFzCMrVtJ8BEK3akeQC',
-        'transaction_id': ''
-    });
-</script>
+<!-- Event snippet for water-filter.com buy conversion page -->
+<!--<script>-->
+<!--    gtag('event', 'conversion', {-->
+<!--        'send_to': 'AW-746876205/WsFzCMrVtJ8BEK3akeQC',-->
+<!--        'transaction_id': ''-->
+<!--    });-->
+<!--</script>-->
 
-<!-- Event snippet for 订单转化 - PC conversion page -->
-<script>
-    newgtag('event', 'conversion', {
-        'send_to': 'AW-734942208/7VDICNPy06cBEICoud4C',
-        'transaction_id': ''
-    });
-</script>
+<!-- Event snippet for Order - PC conversion page -->
+<!--<script>-->
+<!--    newgtag('event', 'conversion', {-->
+<!--        'send_to': 'AW-734942208/7VDICNPy06cBEICoud4C',-->
+<!--        'transaction_id': ''-->
+<!--    });-->
+<!--</script>-->
 
 <div class="checkout-success">
 	<div class="success-title">
