add new google ads code.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/templates/success.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/templates/success.phtml
@@ -25,6 +25,14 @@
 <!--    });-->
 <!--</script>-->
 
+<!-- Event snippet for buy conversion page -->
+<script>
+    gtag('event', 'conversion', {
+        'send_to': 'AW-734942208/TD1KCLb-v-0CEICoud4C',
+        'transaction_id': ''
+    });
+</script>
+
 <div class="checkout-success">
 	<div class="success-title">
 		<p><span class="success-title-icon">icon</span></p>
