--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/logo.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/logo.phtml
@@ -40,22 +40,6 @@ require(['jquery'],function($){
     var imageName = logoSrc.substr(0, logoSrc.length - 4);
     imageName += "-small" + imageType;
     $('.small-logo').attr('src',imageName);
-
-    //add google click add-to-cart event
-    $('.action.tocart.primary').click(function() {
-        function gtag_report_conversion(url) {
-            var callback = function () {
-                if (typeof(url) != 'undefined') {
-                    window.location = url;
-                }
-            };
-            gtag('event', 'conversion', {
-                'send_to': 'AW-734942208/f08TCK-Mwu0CEICoud4C',
-                'event_callback': callback
-            });
-            return false;
-        }
-    });
 });
 </script>
 <?php endif ?>
@@ -76,6 +60,24 @@ require(['jquery'],function($){
         exp.setTime(exp.getTime() + Days*24*60*60*1000);
         document.cookie = name + "="+ escape (value) + ";expires=" + exp.toGMTString()+";path=/;";
     }
+
+    require(['jquery'],function($){
+        //add google click add-to-cart event
+        $('.action.tocart.primary').click(function() {
+            function gtag_report_conversion(url) {
+                var callback = function () {
+                    if (typeof(url) != 'undefined') {
+                        window.location = url;
+                    }
+                };
+                gtag('event', 'conversion', {
+                    'send_to': 'AW-734942208/f08TCK-Mwu0CEICoud4C',
+                    'event_callback': callback
+                });
+                return false;
+            }
+        });
+    });
 </script>
 
 <!-- Bing -->
