rm faq itemprop.

--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/templates/product/view/faq.phtml
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/templates/product/view/faq.phtml
@@ -13,7 +13,7 @@ $_attributeValue = $_product->getResource()->getAttribute($_code)->getFrontend()
 ?>
 
 <?php if ($_attributeValue): ?>
-    <div class="faq" <?php  echo $_attributeAddAttribute;?>>
+    <div class="faq">
         <?php echo $_attributeValue; ?>
     </div>
 <?php endif; ?>
