repair contant us feature.

--- a/app/code/Ecomteck/AdvancedContact/view/frontend/email/ecomteck_advanced_contact_general_email_template.html
+++ b/app/code/Ecomteck/AdvancedContact/view/frontend/email/ecomteck_advanced_contact_general_email_template.html
@@ -14,6 +14,11 @@
 } @-->
 {{template config_path="design/email/header_template"}}
 <p>
+<strong>Customer Name:</strong> {{var name}} <br/>
+<strong>Customer Email:</strong> {{var email}} <br/>
+<strong>Request Type:</strong> {{var type}} <br/>
+<strong>Customer Order ID:</strong> {{var order}} <br/>
+<strong>Customer Phone:</strong> {{var phone}} <br/>
 <strong>Customer Message:</strong> {{var message}} <br/>
 </p>
 {{template config_path="design/email/footer_template"}}
