--- a/app/code/Ecomteck/AdvancedContact/view/frontend/email/ecomteck_advanced_contact_thanksyou_email_template.html
+++ b/app/code/Ecomteck/AdvancedContact/view/frontend/email/ecomteck_advanced_contact_thanksyou_email_template.html
@@ -16,6 +16,7 @@
 {{template config_path="design/email/header_template"}}
 <p class="greeting">{{var thanksmessage}}</p>
 <p>
-<strong>Your Message:</strong><br/> {{var message}} 
+<strong>Your Request Type:</strong> {{var type}} <br/>
+<strong>Your Message:</strong><br/> {{var message}} <br/>
 </p>
 {{template config_path="design/email/footer_template"}}
