--- a/app/code/Ecomteck/AdvancedContact/view/frontend/templates/form.phtml
+++ b/app/code/Ecomteck/AdvancedContact/view/frontend/templates/form.phtml
@@ -80,14 +80,18 @@
     }
     .actions-toolbar>.primary .action:last-child {
         padding: 12px 49.5px;
-        background: #155DA4;
-        color: #fff;
         border-radius: 4px;
         font-size: 14px;
         line-height: 16px;
+        border: 1px solid #155da4;
+    }
+    .captcha-image button {
+        border-radius: 4px;
+        padding: 10px 20px;
     }
     .action.primary:hover {
-        border: 1px solid #155da4;
+        color: #155da4;
+        background: #fff;
     }
     input.mage-error, select.mage-error, textarea.mage-error {
         border-color: #ed8380;
