--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -535,7 +535,8 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		top:50%
 	}
 	.product-item-link{
-		font-size:14px !important
+		font-size:14px !important;
+        -webkit-line-clamp: 2;
 	}
 	.product-item {
         .price-box {
