--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
@@ -505,7 +505,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		top:50%
 	}
 	.product-item-link{
-		font-size:14px !important
+		font-size:14px !important;
 	}
 	.product-item .price-box .price{
 		font-size:16px
