--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
@@ -543,6 +543,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	}
 	.product-item-link{
 		font-size:14px !important;
+        -webkit-line-clamp: 2;
         margin-top: 10px;
 	}
 	.product-item .price-box .price{
