add buy on amazon feature.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/logo.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/header/logo.phtml
@@ -66,6 +66,9 @@ require(['jquery'],function($){
         $('.action.tocart.primary').click(function() {
             gtag_report_conversion();
         });
+        $('.buy-on-amazon').click(function() {
+            gtag_report_conversion2();
+        });
     });
 </script>
 
