--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -481,7 +481,7 @@
     .product-addto-links {
         overflow:hidden;
         clear:both;
-        margin-bottom:@indent__l;
+        margin-bottom:0;
         //display: inline;
         .action {
             //margin-right: 5%;
