change some styles.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/gallery.phtml
@@ -114,11 +114,17 @@ $imageUrl = $this->helper('Magento\Catalog\Helper\Image')
         margin-left:10px;
         color:#333333;
     }
+    .custom-style-galleryshare-fb:hover:before{
+        color:#666666;
+    }
     .custom-style-galleryshare-tw:before{
         font-family: 'icomoon';
         content: "\e920";
         font-size: 23px;
         margin-left:10px;
+        color:#333333;
+    }
+    .custom-style-galleryshare-tw:hover:before{
         color:#666666;
     }
     .custom-style-galleryshare-pn:before{
@@ -126,7 +132,10 @@ $imageUrl = $this->helper('Magento\Catalog\Helper\Image')
         content: "\e91e";
         font-size: 23px;
         margin-left:10px;
-        color:#666666;
+        color:#333333;
+    }
+    .custom-style-galleryshare-pn:hover:before {
+        color:#666666
     }
     .custom-style-galleryshare-fb:hover, .custom-style-galleryshare-tw:hover, .custom-style-galleryshare-pn:hover {
         text-decoration:none;
