--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Review/templates/form.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Review/templates/form.phtml
@@ -133,6 +133,22 @@
     .data.switch .counter{
         display:none;
     }
+    @media (min-width: 768px) {
+        .product.data.items>.item.title>.switch {
+            font-style: normal;
+            font-weight: 600 !important;
+            font-size: 16px !important;
+            line-height: 19px !important;
+            color: #666666 !important;
+        }
+        .product.data.items>.item.title.active>.switch {
+            font-style: normal;
+            font-weight: 600 !important;
+            font-size: 16px !important;
+            line-height: 19px !important; 
+            color: #333333 !important;
+        }
+    }
 </style>
 
 <?php
