--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Review/templates/product/view/list.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Review/templates/product/view/list.phtml
@@ -95,6 +95,9 @@
     .pages .action.next:hover:before, .pages .action.previous:hover:before{
         color:#333333;
     }
+    .product.data.items>.item.title:not(.disabled)>.switch:active, .product.data.items>.item.title.active>.switch, .product.data.items>.item.title.active>.switch:focus, .product.data.items>.item.title.active>.switch:hover{
+        font-family: unset;
+    }
 </style>
 
 <?php
