--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_actions-toolbar.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_actions-toolbar.less
@@ -80,8 +80,8 @@
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
     .actions-toolbar {
         > .primary {
-            margin-left: 16px;
-            margin-right: 16px;
+            margin-left: 0;
+            margin-right: 0;
         }
     }
 }
