--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -1391,7 +1391,7 @@
     padding: 8px 16px ;
     border: 1px solid #E1E1E1  ;
     border-radius: 4px;
-    margin-bottom: 0  ;
+    margin-bottom: 8px  ;
     margin-right: 8px  ;
     font-style: normal;
     font-weight: normal;
@@ -1470,6 +1470,10 @@
     font-size: 16px;
     line-height: 19px;
 }
+.action.primary:hover {
+    background-color:  #155DA4 ;
+    color: #ffffff;
+}
 .sparsh-buynow-view #product-sparsh-buynow-button{
     color: #155DA4;
     border: 1px solid #155DA4;
@@ -1478,7 +1482,7 @@
     padding: 12px 17px;
 }
 #store-selector .form-continue .actions-toolbar .action.primary, .form-address-edit .actions-toolbar .action.vertex-secondary, .multicheckout .action.primary, .bundle-actions .action.primary.customize, .bundle-options-container .block-bundle-summary .box-tocart .action.primary, .cart-summary .checkout-methods-items .action.primary.checkout, .block-minicart .block-content>.actions>.primary .action.primary, .methods-shipping .actions-toolbar .action.primary, .block-authentication .action.action-register, .block-authentication .action.action-login, .checkout-payment-method .payment-method-content>.actions-toolbar>.primary .action.primary, .form-address-edit .actions-toolbar .action.primary, .box-tocart .action.tocart {
-    padding: 12px 17px;
+    padding: 13px 17px;
 }
 .product-social-links{
     text-align: left;
