--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
@@ -155,17 +155,18 @@
 
 .slideshow-container{
 	.owl-dots .owl-dot{
-		width:10px;
-		height:10px;
-		background:#e8e8e8;
+		width:40px;
+		height:4px;
+		background:#FFFFFF;
 		margin:0 3px;
-		.abs-borderradius(100%);
+		.abs-borderradius(1px);
 		.abs-transition();
 		span{
 			display:none
 		}
 		&.active{
-			background:@main_hover_text
+			// background:@main_hover_text
+			background:#FBB500;
 		}
 	}
 }
