--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -253,6 +253,9 @@
                         margin-bottom: 0;
                     }
                 }
+                .price-label {
+                    display: none;
+                }
             }
             .price-including-tax + .price-excluding-tax,
             .weee + .price-excluding-tax,
@@ -272,6 +275,9 @@
                 .price-wrapper .price {
                     .lib-css(font, @f_h2);
                     font-weight: @font-weight__light;
+                }
+                .price-label {
+                    display: inline-block;
                 }
             }
             .special-price {
